tests/sksl/errors/ReservedNameDouble.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'double'
1 error
